--- a/mysite/dockerfile
+++ b/mysite/dockerfile
@@ -1,29 +1,15 @@
+FROM python:3.11
 
-FROM python:3.11-slim
-
-
-RUN apt-get update && apt-get install -y \
-    curl \
-    openssh-client \
-    && rm -rf /var/lib/apt/lists/*
-
-
-RUN curl -sSL https://install.python-poetry.org | python3 -
-
-
-ENV PATH="${PATH}:/root/.local/bin"
-
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+RUN pip install --upgrade pip "poetry==1.4.2"
+RUN pip install --upgrade pip "gunicorn==20.1.0"
+RUN poetry config virtualenvs.create false --local
+COPY pyproject.toml ./
+RUN poetry install
 
-COPY pyproject.toml poetry.lock* ./
+COPY mysite .
 
-
-RUN --mount=type=ssh poetry install --no-root
-
-
-COPY app/ ./app/
-
-
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
