--- a/mysite/pyproject.toml
+++ b/mysite/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["vladlen dazhboggg@mail.ru"]
 [tool.poetry.dependencies]
 python = "^3.11"
 flask = "^2.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
